# eba-xbrl-engine

./: .gitignore  20260106 Annotated Table Layout  COREP 4.2 COREP_LCR_DACOREP 4.2.xlsx  README.md  app.py  generate_ipr_templates.py  generate_lcr_templates.py  pyproject.toml  requirements.txt
engine/: generator.py  ipr_generator.py  ipr_reader.py  ipr_sample_creator.py  reader.py  sample_creator.py  validator.py
engine/definitions/: ipr_templates.py  lcr_templates.py
src/eba_xbrl_engine/: __init__.py  app.py
tests/: test_reader.py
